# chromaprint_sys

./: .gitignore  .gitmodules  .travis.yml  Cargo.nix  Cargo.toml  README.md  build.rs  default.nix  shell.nix  wrapper.h
.github/workflows/: ci.yml
ci/: script.sh
nix/: default.nix  sources.json
src/: lib.rs  main.rs
