[package]
name = "chromaprint_sys"
description = "Low level bindings to Chromaprint"

documentation = "https://github.com/acoustid/chromaprint"
homepage = "https://acoustid.org/chromaprint"
repository = "https://github.com/bemeurer/chromaprint_sys"

readme = "./README.md"

keywords = ["chromaprint", "bindings", "sys", "bindgen", "audio"]
categories = ["encoding", "external-ffi-bindings", "multimedia::audio", "multimedia"]

license = "BSD-3-Clause"
license_file = "./LICENSE"

version = "1.0.1"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "bemeurer/chromaprint_sys" }
maintenance = { status = "passively-maintained" }

[features]
default = ["dynamic"]
dynamic = ["metadeps"]
static = ["cmake"]

[package.metadata.pkg-config]
libchromaprint = "1.1"

[build-dependencies]
bindgen = "0.47.1"
cmake = { version="0.1", optional=true  }
metadeps = { version="1.1.2", optional=true }
