[package]
name = "chromaprint_sys"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
version = "0.2.0"

categories = ["encoding", "external-ffi-bindings", "multimedia::audio", "multimedia"]
description = "Low level bindings to Chromaprint"
documentation = "https://github.com/acoustid/chromaprint"
edition = "2018"
homepage = "https://acoustid.org/chromaprint"
keywords = ["chromaprint", "bindings", "sys", "bindgen", "audio"]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/lovesegfault/chromaprint_sys"

[features]
default = []
vendor = ["cmake"]

[build-dependencies]
bindgen = "0.53.2"
cmake = { version = "0.1.42", optional = true }
pkg-config = "0.3.17"

[dev-dependencies]
rand = "0.7.3"
rand_chacha = "0.2.2"
